--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main id="main" class="main">
-        <section>
+        <section class="inicio">
             <div class="conteudo">
                 <h2 class="titulo-inicio">Vitral arte</h2>
                 <p class="texto-inicio">especialistas em vidros</p>
