--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p class="texto-inicio">especialistas em vidros</p>
             </div>
         </section class="container">
-        <section class="sobre nos">
+        <section class="sobreNos">
             <div class="container">
                 <div class="conteudo">
                     <h4 class="titulo">um pouco <span>sobre nos</span></h4>
@@ -173,7 +173,6 @@
             </div>
         </section>
         <div class="divisao">
-            <hr>
         </div>
         <section class="formulario">
             <div class="container">
@@ -186,7 +185,7 @@
                 <div class="informacoes">
                     <div class="endereco">
                         <h5 class="titulo">nosso endereco</h5>
-                        <p class="endereco">rua das palmeiras, 55 mogi das cruzes</p>
+                        <p class="texto">rua das palmeiras, 55 mogi das cruzes</p>
                     </div>
                 </div>
                 <div class="form">
